1. Update data. 2. Download data from Registry Office (Urząd Stanu Cywilnego) related to weekly deaths since 2015; 3. Add functionality to compare Covid deaths in Poland with all deaths in '21;

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -4,8 +4,11 @@ CsvHdr = Polska zgony sam COV,Niemcy zgony COV,Holandia zgony COV,Wielka Brytani
 
 [DATA_RANGE]
 AllCountries = 90
+PolAgeStartDate = 01.09.2021
+PolAgeStopAnalyse = 31.12.2021
+AllDeathsYears = 2019,2021
+AllDeathsCovYear = 2021
 
 [LOGGING]
 EnableInfo = yes
-
 
