1. Update data; 2. Implement whole functionality in python - full multiplatform; 3. Implement creation of chart to compare all deaths from configured years with covid related deaths; 4. Remove unnecessary/old scripts and files; 5. Update README.md - lack of few information yet;

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -4,11 +4,13 @@ CsvHdr = Polska zgony sam COV,Niemcy zgony COV,Holandia zgony COV,Wielka Brytani
 
 [DATA_RANGE]
 AllCountries = 90
-PolAgeStartDate = 01.09.2021
-PolAgeStopAnalyse = 31.12.2021
 AllDeathsYears = 2019,2021
 AllDeathsCovYear = 2021
 
 [LOGGING]
 EnableInfo = yes
 
+[AGE_STAT]
+PolAgeStartDate = 2021-09-01
+PolAgeEndDate = 2021-12-31
+PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
