1. Update data; 2. Update Scripts/config.ini file; 3. Fix problem with files encoding between linux/Windows; 4. Fix problem with urllib module on Windows;

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -1,16 +1,29 @@
+;Section related to comparison Poland and configured countries
 [COUNTRIES]
+;List - list of countries to be compared. Poland and Germany data are collected from official govs data, all the rest from OWID data
 List = Poland,Germany,Netherlands,United Kingdom
+;CsvHdr - description of csv's file columns
 CsvHdr = Polska zgony sam COV,Niemcy zgony COV,Holandia zgony COV,Wielka Brytania zgony COV
 
+;Section related to date limits for output data
 [DATA_RANGE]
+;AllCountries - number of days back from today, for which data relkated to COUNTRIES section myust be analysed and calculated
 AllCountries = 90
+;AllDeathsYears - list of years for which weekly data must be collected for all deaths. Must be separated by comma.
 AllDeathsYears = 2019,2021
+;AllDeathsYears - list of years for which weekly data must be collected for covid related deaths. Must be separated by comma.
 AllDeathsCovYear = 2021
 
+;Section related to logging
 [LOGGING]
+;EnableInfo - enables logging of info traces. If set to no, then only warning and error would be printed in console
 EnableInfo = yes
 
+;Section related to creation of Age statistics for Poland
 [AGE_STAT]
+;PolAgeStartDate - start date for collecting age statistics
 PolAgeStartDate = 2021-09-01
+;PolAgeEndDate - end date for collecting age statistics
 PolAgeEndDate = 2021-12-31
+;PolAgeRange - list of tuples with age ranges for calculations
 PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
