1. Update data; 2. Update link to deaths from: Urzad Stanu Cywilnego; 3. Update createBASIWCsv routine to create weekly statistics for deaths and cases depending on vaccination status; 4. Remove polCasesCalc.csv and polDeathsCalc.csv from repository as they totally depends on ini file in specific date range; 5. Modify downloaded zakazenia.csv and zgony.csv by removing 3 additional columns with age, which introduced huge amount of changes in repository; 6. Add zakazenia.csv to git-lfs as it exceeded allowed size of github 7. Block downloading of zgony.csv/zakazenia.csv files to avoid script errors as Ministerstwo Zdrowia has introduced new csv files' layout 8. !This is the last commit with zakazenia.csv/zgony.csv files containing information about vax producer and type of dose!;

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -20,10 +20,19 @@ AllDeathsCovYear = 2021
 EnableInfo = yes
 
 ;Section related to creation of Age statistics for Poland
-[AGE_STAT]
+[BASIW_STAT]
 ;PolAgeStartDate - start date for collecting age statistics
-PolAgeStartDate = 2021-09-01
+PolAgeStartDate = 2021-12-11
 ;PolAgeEndDate - end date for collecting age statistics
-PolAgeEndDate = 2021-12-31
+PolAgeEndDate = 2022-01-11
 ;PolAgeRange - list of tuples with age ranges for calculations
 PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
+;PolAgeRange = (0,4),(5,11),(12,18),(19,24),(25,120)
+;PolAgeRange = (0,17),(18,49),(50,59),(60,65),(66,120)
+;PolAgeRange = (0,65),(66,69),(70,79),(80,89),(90,120)
+;PolCaseDeathAnalyze - enable BASIW analyzer for specified time range - it collects deaths/cases according to vaccination status
+PolCaseDeathAnalyze = yes
+;PolCaseDeathStartDate - start date for BASIW analyzer
+PolCaseDeathStartDate = 2021-08-30
+;PolCaseDeathEndDate - end date for BASIW analyzer
+PolCaseDeathEndDate = 2022-12-31
