1. Update data; 2. Add Daily calculations for deaths and cases made on BASIW database; 3. Cleanup of python script; 4. Modify Vax calculation columns' name; 5. Create deathsCasesIsolationFromDate.csv containing all statistics like quarantine, cases, deaths etc. with configurable startdate

--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -13,6 +13,8 @@ AllCountries = 90
 AllDeathsYears = 2019,2021
 ;AllDeathsYears - list of years for which weekly data must be collected for covid related deaths. Must be separated by comma.
 AllDeathsCovYear = 2021
+;StartDatePolStats - start date for complex polish stats
+StartDatePolStats = 2020-11-24
 
 ;Section related to logging
 [LOGGING]
@@ -23,14 +25,15 @@ EnableDebug = no
 ;Section related to creation of Age statistics for Poland
 [BASIW_STAT]
 ;PolAgeStartDate - start date for collecting age statistics
-PolAgeStartDate = 2021-12-17
+PolAgeStartDate = 2021-12-26
 ;PolAgeEndDate - end date for collecting age statistics
-PolAgeEndDate = 2022-01-17
+PolAgeEndDate = 2022-12-17
 ;PolAgeRange - list of tuples with age ranges for calculations
-PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
+;PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
 ;PolAgeRange = (0,4),(5,11),(12,18),(19,24),(25,120)
 ;PolAgeRange = (0,17),(18,49),(50,59),(60,65),(66,120)
 ;PolAgeRange = (0,65),(66,69),(70,79),(80,89),(90,120)
+PolAgeRange = (0,17),(18,49),(50,65),(66,69),(70,120)
 ;PolCaseDeathAnalyze - enable BASIW analyzer for specified time range - it collects deaths/cases according to vaccination status
 PolCaseDeathAnalyze = yes
 ;PolCaseDeathStartDate - start date for BASIW analyzer
