--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -33,13 +33,14 @@ PolAgeEndDate = 2022-01-31
 ;PolAgeRange = (0,4),(5,11),(12,18),(19,24),(25,120)
 ;PolAgeRange = (0,17),(18,49),(50,59),(60,65),(66,120)
 ;PolAgeRange = (0,65),(66,69),(70,79),(80,89),(90,120)
-PolAgeRange = (0,17),(18,49),(50,65),(66,69),(70,120)
+;PolAgeRange = (0,17),(18,49),(50,65),(66,69),(70,120)
+PolAgeRange = (0,19),(20,49),(50,64),(65,69),(70,120)
 ;PolCaseDeathAnalyze - enable BASIW analyzer for specified time range - it collects deaths/cases according to vaccination status
 PolCaseDeathAnalyze = yes
 ;PolCaseDeathStartDate - start date for BASIW analyzer
-PolCaseDeathStartDate = 2021-08-30
+PolCaseDeathStartDate = 2021-08-31
 ;PolCaseDeathEndDate - end date for BASIW analyzer
-PolCaseDeathEndDate = 2022-01-31
+PolCaseDeathEndDate = 2022-02-06
 
 [CLEANUP]
 ;DeleteTmpFiles - perform cleanup at final stage of script - delete all temporarly downloaded files
