--- a/Scripts/config.ini
+++ b/Scripts/config.ini
@@ -3,7 +3,7 @@
 ;List - list of countries to be compared. Poland and Germany data are collected from official govs data, all the rest from OWID data
 List = Poland COV,Poland COV+Sick,Germany,Greece,United Kingdom,Czechia,Slovakia,Belgium,Australia,Portugal,Austria,France,Switzerland,Spain,Hungary,Ireland,Israel,Italy
 ;CsvHdr - description of csv's file columns
-CsvHdr = Polska sam COV,Polska(ch.w.), Niemcy,Grecja,UK,Czechy,Słowacja,Belgia,Australia,Portugalia,Austria,Francja,Szwajcaria,Hiszpania,Węgry,Irlandia,Izrael,Włochy
+CsvHdr = Polska COV,Polska(ch.w.), Niemcy,Grecja,UK,Czechy,Słowacja,Belgia,Australia,Portugalia,Austria,Francja,Szwajcaria,Hiszpania,Węgry,Irlandia,Izrael,Włochy
 
 ;Section related to date limits for output data
 [DATA_RANGE]
@@ -25,9 +25,9 @@ EnableDebug = no
 ;Section related to creation of Age statistics for Poland
 [BASIW_STAT]
 ;PolAgeStartDate - start date for collecting age statistics
-PolAgeStartDate = 2022-01-01
+PolAgeStartDate = 2022-02-08
 ;PolAgeEndDate - end date for collecting age statistics
-PolAgeEndDate = 2022-01-31
+PolAgeEndDate = 2022-02-14
 ;PolAgeRange - list of tuples with age ranges for calculations
 ;PolAgeRange = (0,19),(20,39),(40,59),(60,79),(80,120)
 ;PolAgeRange = (0,4),(5,11),(12,18),(19,24),(25,120)
@@ -38,9 +38,9 @@ PolAgeRange = (0,19),(20,49),(50,64),(65,69),(70,120)
 ;PolCaseDeathAnalyze - enable BASIW analyzer for specified time range - it collects deaths/cases according to vaccination status
 PolCaseDeathAnalyze = yes
 ;PolCaseDeathStartDate - start date for BASIW analyzer
-PolCaseDeathStartDate = 2021-08-31
+PolCaseDeathStartDate = 2021-09-01
 ;PolCaseDeathEndDate - end date for BASIW analyzer
-PolCaseDeathEndDate = 2022-02-06
+PolCaseDeathEndDate = 2022-02-14
 
 [CLEANUP]
 ;DeleteTmpFiles - perform cleanup at final stage of script - delete all temporarly downloaded files
